--- a/app/src/main/res/layout/layout_signin.xml
+++ b/app/src/main/res/layout/layout_signin.xml
@@ -1,6 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="16dp"
+    android:background="@drawable/splash_screen">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical"
+        android:layout_margin="16dp"
+        android:gravity="center_horizontal"
+        android:layout_centerHorizontal="true"
+        android:padding="16dp"
+        >
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_phone_sign_in"
+            android:layout_marginBottom="10dp"
+            android:background="@color/white"
+            android:textColor="@color/black"
+            android:drawableStart="@drawable/ic_baseline_local_phone_24"
+            android:text="Sign in with Phone"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
+
+</RelativeLayout>
